# py-med-management-app

./: .env-example  README.md  compose.yml  main.py  med-manage.drawio  medicos.sql  pyproject.toml  schema.sql
be/: app.py  config.py  db.py
be/models/: __init__.py  cita.py  historial.py  medico.py  usuario.py
be/routers/: cita.py  medico.py  usuario.py
be/schemas/: __init__.py  cita.py  medico.py  usuario.py
fe/: main.py
fe/templates/: dashboard.html  index.html  login.html  registro.html
